  
* Added CFolderDialog class
  This class wraps SHBrowseForFolder to display a dialog for choosing a folder.  
  
* Updated the CFile class
  The following function now throw an exception on failure:
    - Rename
    - Remove
    - Flush
    - Close
	- SetLength
	- LockRange
	- UnlockRange 

* Updated the status bar
- A gripper is added if the parent window has the WS_THICKFRAME style.
- The sizes of the indicators are determined more accurately in frames.


Changes in detail
-----------------
Added CEnhMetaFileDC
Added CFileFind class
Added CFolderDialog class
Added CWnd::GetExStyle
Added CWnd::GetStyle
Added CWnd::SetExStyle
Added CWnd::SetStyle
Added CDocker::GetActiveView
Added CDockFrame::OnActivate
Added CDockFrame::OnDockActivated
Added CDockFrame::OnDockDestroyed
Added CDockFrame::OnMouseActivate
Added CDockFrame::OnSysColorChange
Added ::GetNonClientMetrics()
Added UWM_GETCDIALIOG message

Added Direct2D           sample
Added FilePrintPreview   sample
Added StatusBarEx        sample

Modified CFile::Rename			now throws an exception on failure 
Modified CFile::Remove		    now throws an exception on failure 
Modified CFile::Flush		    now throws an exception on failure 
Modified CFile::Close		    now throws an exception on failure 
Modified CFile::SetLength		now throws an exception on failure 
Modified CFile::LockRange		now throws an exception on failure 
Modified CFile::UnlockRange		now throws an exception on failure
Modified CTab::AddTabPage       now returns CWnd*

Removed ::GetSizeofNonClientMetrics   Use ::GetNonClientMetrics instead


Version 8.4
===========

This version of Win32++ introduces class templates to provide the different
types of frames. Frames can support a Single Document Interface (SDI) or a
Multiple Document Interface (MDI). They might or might not support docking,
and they might or might not support the Ribbon Framework. Each of these
optional features are provided using class templates.


New Features and Enhancements